--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ eframe = { version = "0.27.2", features = ["wgpu"] }
 wgpu = { features = ["webgpu", "webgl"], optional = true}
 env_logger = "0.11.3"
 glam = { version = "0.27.0", features = ["bytemuck"] }
+image = "0.25.1"
